--- a/templates/rscbody.html
+++ b/templates/rscbody.html
@@ -85,7 +85,7 @@
             </tr>
             {% for r in allreq %}
 
-            <tr>
+            <tr style="background-color:  {% if r.current_status == 'N' %} #b40d0d  {% elif r.current_status == 'O' %} #f2926d {% elif r.current_status == 'C' %} #519943 {% endif %};">
 
                 <td>{{ r.assigned_to }}</td>
                 <td>{{ r.title }}</td>
