--- a/templates/rscbase.html
+++ b/templates/rscbase.html
@@ -11,32 +11,9 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<body style="background-color: #8242d1;">
+<body>
 
-
-<nav class="navbar navbar-default navbar-fixed-top" style="background-color: #0d1f53;">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#myPage"> <img src="/media/butrackimg/rsclogo.SVG" width="40" height='40'>  </a>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#about">ABOUT</a></li>
-        <li><a href="#services">SERVICES</a></li>
-        <li><a href="#portfolio">PORTFOLIO</a></li>
-        <li><a href="#contact">CONTACT</a></li>
-        <li><a href="http://rscbugtrack.pythonanywhere.com/admin">Login</a></li>
-
-      </ul>
-    </div>
-  </div>
-</nav>
-
+<img src="/media/butrackimg/11.JPG" >
 {% block rscbody %}
 
 {% endblock %}
