--- a/templates/rscbody.html
+++ b/templates/rscbody.html
@@ -1,77 +1,22 @@
 {% extends 'rscbase.html' %}
 
-  <style>
-  .btn-default {
-      box-shadow: 1px 2px 5px #000000;
-  }
-  </style>
 
 {% block rscbody %}
 
-<!--<div class="jumbotron text-center">-->
-<!--  <h1>Company</h1>-->
-<!--  <p>We specialize in blablabla</p>-->
-<!--  <form>-->
-<!--    <div class="input-group">-->
-<!--      <input type="readonly" class="form-control" placeholder="Email Address" required>-->
-<!--      <div class="input-group-btn">-->
-<!--        <button type="button" class="btn btn-danger">Subscribe</button>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </form>-->
-<!--</div>-->
+<br>
+<br>
+
+<br>
+
 
 
   <div class="container">
 
-  <h2>What our customers say</h2>
-  <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
 
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <h4>"This company is the best. I am so happy with the result!"<br><span>Michael Roe, Vice President, Comment Box</span></h4>
-      </div>
-      <div class="item">
-        <h4>"One word... WOW!!"<br><span>John Doe, Salesman, Rep Inc</span></h4>
-      </div>
-      <div class="item">
-        <h4>"Could I... BE any more happy with this company?"<br><span>Chandler Bing, Actor, FriendsAlot</span></h4>
-      </div>
-    </div>
-<br>
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-
-
-
-<!-- Container (About Section) -->
-<!--<div id="about" class="container-fluid">-->
-<!--  <div class="row">-->
-<!--    <div class="col-sm-8">-->
-<!--      <p>About Company Page</p><br>-->
-<!--      <br><button class="btn btn-default btn-sm">Get in Touch</button>-->
-<!--    </div>-->
-
-<!--  </div>-->
-<!--</div>-->
 
     <div class="panel panel-primary">
-      <div class="panel-heading">List of tasks assigned by admin....</div>
+      <div class="panel-heading" style="background-color:white; color: #540606;">   <span> RSC  <img src="/media/butrackimg/bugimage.jpeg" width="30" height="30" >'S  </span>
+</div>
       <div class="panel-body">
 
         <table class="table table-condensed">
@@ -82,6 +27,8 @@
                 <th>Current status</th>
                 <th>Priority</th>
                 <th>Action</th>
+                <th>Points</th>
+
             </tr>
             {% for r in allreq %}
 
@@ -96,6 +43,7 @@
                           <button type="button" class="btn btn-info">Action</button>
                      </a>
                 </td>
+                <td>{{ r.points }}</td>
 
 
             </tr>
